# ceres-solver

./: CMakeLists.txt  README.md  ceres_lession1.cpp  curve-fitting.cpp
common/: read_g2o.h
dataset/: poses2d_optimized.txt  poses2d_original.txt  poses3d_optimized.txt  poses3d_original.txt  sphere_bignoise_vertex3.g2o
slam_2d/: angle_local_parameterization.h  normalize_angle.h  plot_results.py  pose_graph_2d.cpp  pose_graph_2d_error_term.h  read_g2o.h  types.h
slam_3d/: pose_graph_3d.cpp  pose_graph_3d_error_term.h  types.h
